2005-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/file-name.cc (is_absolute):  new method.

2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (setup_paths) [__MINGW32__]: Comment-out broken
	relocation code.

	* stepmake/stepmake/generic-vars.make (INSTALL): Assign INSTALL_PY
	iso itself.

	* lily/relocate.cc [HAVE_GETTEXT]: Include libintl.h.  Fixes mingw
	compile.

2005-12-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* .cvsignore: Add install-sh.

	* autogen.sh (srcdir): Typo.

2005-12-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* autogen.sh (srcdir): urg. Touch install-sh.

	* stepmake/bin/install-sh (Module): remove.

	* stepmake/stepmake/generic-vars.make (INSTALL): add $(INSTALL).

	* lily/include/relocate.hh: new file.

	* lily/relocate.cc: new file. Contain relocation logic.

	* lily/main.cc (setup_paths): fix: LILYPOND_RELOCATE_PREFIX.
	(main): read LILYPOND_VERBOSE as the first thing.

	* stepmake/aclocal.m4: remove INSTALL variable.

	* GNUmakefile.in ($(tree-share-prefix)/mf-link-tree link-mf-tree):
	separate target for making font symlinks.
	(documentation-dir): use $(if $(findstring )) for switching off
	Documentation.

	* stepmake/stepmake/help2man-vars.make (OUT_DIST_FILES): only do
	something if DOCUMENTATION is no.

2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.24

	* lily/script-column-engraver.cc (stop_translation_timestep):
	delay adding to script-column.

	* lily/tuplet-bracket.cc (print): suicide if no control-points. 

	* python/convertrules.py (conv): rule for number-visibility

	* lily/slur-configuration.cc (score_extra_encompass): different
	distance measure for avoid and inside avoidance.
	(score_extra_encompass): use 1/(distance+eps) as penalty.

	* lily/slur-scoring.cc (generate_avoid_offsets): use 'inside
	encompass objects for generating slur curves.

	* lily/slur.cc: use details iso. slur-details property.

	* input/regression/slur-tuplet.ly: new file.
