@@ -120,5 +120,8 @@ File_name::File_name (String file_name)
 bool
 File_name::is_absolute () const
 {
-  return (dir_[0] == DIRSEP);
+  /*
+    Hmm. Is c:foo absolute?  
+   */
+  return (dir_.length () && dir_[0] == DIRSEP) || root_.length ();
 }
