@@ -1,6 +1,10 @@
 2005-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/relocate.cc (setup_paths): only check path for non-absolute
+	dir without directory part.
+
 	* flower/file-name.cc (is_absolute):  new method.
+	(is_absolute): check root_ too.
 
 2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>
 
